webservice-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webservice
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: webservice
    spec:
      containers:
      - env:
        - name: GET_HOSTS_FROM
          value: dns
        image: webservice
        name: webservice
        ports:
        - containerPort: 80
        resources: {}
        imagePullPolicy: Never
      restartPolicy: Always
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
          - "database"
status: {}
