database-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
