webservice-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webservice
spec:
  selector:
    app: webservice
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
