webservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /docker-php/
        backend:
          serviceName: webservice
          servicePort: 8080
